--- a/index.html
+++ b/index.html
@@ -53,47 +53,6 @@
 
         <!-- Main Content -->
         <div id="mainContent">
-            <!-- Form Section -->
-            <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
-                <h2 class="text-xl font-semibold text-slate-900 mb-4">Add New Project Assignment</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Project Name *</label>
-                        <input type="text" id="projectName" placeholder="e.g., Website Redesign" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Team Engineer Name *</label>
-                        <input type="text" id="engineerName" placeholder="e.g., John Doe" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Start Date *</label>
-                        <input type="date" id="startDate" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">End Date *</label>
-                        <input type="date" id="endDate" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Status</label>
-                        <select id="status" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            <option>In Progress</option>
-                            <option>Completed</option>
-                            <option>On Hold</option>
-                            <option>At Risk</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Notes</label>
-                        <input type="text" id="notes" placeholder="Additional notes" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div class="md:col-span-2 lg:col-span-3 flex gap-3 pt-2">
-                        <button onclick="addProject()" class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-medium">
-                            ➕ Add Assignment
-                        </button>
-                    </div>
-                </div>
-            </div>
-
             <!-- Filter Section -->
             <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
                 <h2 class="text-lg font-semibold text-slate-900 mb-4">🔍 View Active Assignments</h2>
@@ -153,6 +112,47 @@
 
         <!-- Admin Panel Content -->
         <div id="adminPanel" class="hidden">
+            <!-- Add New Project Assignment Form -->
+            <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
+                <h2 class="text-xl font-semibold text-slate-900 mb-4">➕ Add New Project Assignment</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Project Name *</label>
+                        <input type="text" id="projectName" placeholder="e.g., Website Redesign" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Team Engineer Name *</label>
+                        <input type="text" id="engineerName" placeholder="e.g., John Doe" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Start Date *</label>
+                        <input type="date" id="startDate" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">End Date *</label>
+                        <input type="date" id="endDate" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Status</label>
+                        <select id="status" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            <option>In Progress</option>
+                            <option>Completed</option>
+                            <option>On Hold</option>
+                            <option>At Risk</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Notes</label>
+                        <input type="text" id="notes" placeholder="Additional notes" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    </div>
+                    <div class="md:col-span-2 lg:col-span-3 flex gap-3 pt-2">
+                        <button onclick="addProject()" class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-medium">
+                            ➕ Add Assignment
+                        </button>
+                    </div>
+                </div>
+            </div>
+
             <!-- Cloud Storage Section -->
             <div class="bg-gradient-to-r from-purple-600 to-blue-600 rounded-lg shadow-lg p-6 mb-8 text-white">
                 <div class="flex items-start justify-between mb-6">
