--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <!-- Filter Section -->
             <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
                 <h2 class="text-lg font-semibold text-slate-900 mb-4">🔍 View Active Assignments</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
                     <div>
                         <label class="block text-sm font-medium text-slate-700 mb-2">Filter By</label>
                         <select id="filterType" onchange="updateFilterOptions()" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -87,7 +87,25 @@
                             Clear Filters
                         </button>
                     </div>
+                    <div class="flex items-end">
+                        <button onclick="toggleAllEngineersView()" class="w-full px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition font-medium">
+                            📊 All Engineers Week View
+                        </button>
+                    </div>
                 </div>
+            </div>
+
+            <!-- All Engineers Week-wise View -->
+            <div id="allEngineersSection" class="hidden bg-white rounded-lg shadow-lg p-6 mb-8">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-xl font-semibold text-slate-900">
+                        📊 All Engineers - Week-wise Project Overview
+                    </h2>
+                    <button onclick="closeAllEngineersView()" class="px-4 py-2 bg-slate-600 text-white rounded-lg hover:bg-slate-700 transition font-medium text-sm">
+                        ✕ Close
+                    </button>
+                </div>
+                <div id="allEngineersContent" class="space-y-6"></div>
             </div>
 
             <!-- Week-wise Breakdown (shown only when filtering by engineer) -->
